fix(markdown): ordered lists shift to the left #288

--- a/source/css/common/markdown.styl
+++ b/source/css/common/markdown.styl
@@ -57,7 +57,7 @@
     color var(--default-text-color)
 
   ul > li, ol > li
-    margin-left 16px
+    margin-left 20px
     line-height 2rem
 
   ul
